--- a/obi1/pom.xml
+++ b/obi1/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>tao</groupId>
-	<artifactId>contierspringmvc</artifactId>
+	<artifactId>obi1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
