--- a/obi1/pom.xml
+++ b/obi1/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>contierspringmvc</name>
+	<name>obi</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
